force-app/main/default/objects/UtilisationApps__c/UtilisationApps__c.object-meta.xml
<CustomObject>
    <label>Utilisation des Apps</label>
    <nameField>
        <displayFormat>UA-{000000000}</displayFormat>
        <label>Numéro de l&#39;utilisation</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Utilisations des Apps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>