force-app/main/default/objects/UtilisationApps__c/fields/ApeCode__c.field-meta.xml
<CustomField>
    <fullName>ApeCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Code APE</label>
    <referenceTo>ApeCode__c</referenceTo>
    <relationshipLabel>Utilisations des Apps</relationshipLabel>
    <relationshipName>Utilisations_des_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>