force-app/main/default/objects/UtilisationApps__c/fields/AppsOnboarding__c.field-meta.xml
<CustomField>
    <fullName>AppsOnboarding__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Applications activées</label>
    <type>Checkbox</type>
</CustomField>