force-app/main/default/objects/UtilisationApps__c/fields/BankAccountEnabled__c.field-meta.xml
<CustomField>
    <fullName>BankAccountEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compte en banque activé</label>
    <type>Checkbox</type>
</CustomField>