force-app/main/default/objects/UtilisationApps__c/fields/CityBranding__c.field-meta.xml
<CustomField>
    <fullName>CityBranding__c</fullName>
    <label>Ville de la marque</label>
    <length>255</length>
    <type>Text</type>
</CustomField>