force-app/main/default/objects/UtilisationApps__c/fields/EndOfMissionDate__c.field-meta.xml
<CustomField>
    <fullName>EndOfMissionDate__c</fullName>
    <label>Fin de mission</label>
    <type>Date</type>
</CustomField>