force-app/main/default/objects/UtilisationApps__c/fields/Entreprise__c.field-meta.xml
<CustomField>
    <fullName>Entreprise__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entreprise</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Utilisations des Apps</relationshipLabel>
    <relationshipName>Utilisations_des_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>