force-app/main/default/objects/UtilisationApps__c/fields/FirstnameContactPrincipal__c.field-meta.xml
<CustomField>
    <fullName>FirstnameContactPrincipal__c</fullName>
    <label>Prénom du contact principal</label>
    <length>150</length>
    <type>Text</type>
</CustomField>