force-app/main/default/objects/UtilisationApps__c/fields/IsProspect__c.field-meta.xml
<CustomField>
    <fullName>IsProspect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prospect ?</label>
    <type>Checkbox</type>
</CustomField>