force-app/main/default/objects/UtilisationApps__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Utilisations des Apps</relationshipLabel>
    <relationshipName>Utilisations_des_Apps</relationshipName>
    <type>Lookup</type>
</CustomField>