force-app/main/default/objects/UtilisationApps__c/fields/LegalStatus__c.field-meta.xml
<CustomField>
    <fullName>LegalStatus__c</fullName>
    <label>Forme Juridique</label>
    <length>50</length>
    <type>Text</type>
</CustomField>