force-app/main/default/objects/UtilisationApps__c/fields/MainEmail__c.field-meta.xml
<CustomField>
    <fullName>MainEmail__c</fullName>
    <label>Email principal</label>
    <length>150</length>
    <type>Text</type>
</CustomField>