force-app/main/default/objects/UtilisationApps__c/fields/MainPhoneNumber__c.field-meta.xml
<CustomField>
    <fullName>MainPhoneNumber__c</fullName>
    <label>Téléphone principal</label>
    <length>15</length>
    <type>Text</type>
</CustomField>