force-app/main/default/objects/UtilisationApps__c/fields/NameOfContact__c.field-meta.xml
<CustomField>
    <fullName>NameOfContact__c</fullName>
    <label>nom du contact</label>
    <length>100</length>
    <type>Text</type>
</CustomField>