force-app/main/default/objects/UtilisationApps__c/fields/NumberBGI__c.field-meta.xml
<CustomField>
    <fullName>NumberBGI__c</fullName>
    <label>Numéro BGI du Dossier</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>