force-app/main/default/objects/UtilisationApps__c/fields/PlaceOfProduction__c.field-meta.xml
<CustomField>
    <fullName>PlaceOfProduction__c</fullName>
    <label>Lieu de production</label>
    <length>100</length>
    <type>Text</type>
</CustomField>