force-app/main/default/objects/UtilisationApps__c/fields/ReferentCollab__c.field-meta.xml
<CustomField>
    <fullName>ReferentCollab__c</fullName>
    <label>Collaborateur référent</label>
    <length>50</length>
    <type>Text</type>
</CustomField>