force-app/main/default/objects/UtilisationApps__c/fields/TiimeProEnabled__c.field-meta.xml
<CustomField>
    <fullName>TiimeProEnabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TiimePro activé</label>
    <type>Checkbox</type>
</CustomField>