force-app/main/default/objects/UtilisationApps__c/listViews/Tout.listView-meta.xml
<ListView>
    <fullName>Tout</fullName>
    <columns>NAME</columns>
    <columns>Name__c</columns>
    <columns>FirstnameContactPrincipal__c</columns>
    <columns>NameOfContact__c</columns>
    <columns>Entreprise__c</columns>
    <columns>NumberBGI__c</columns>
    <columns>ReferentCollab__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>